服务商模型管理api实现